argocd/base/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: tautulli
  ports:
    - port: 8181
      targetPort: 8181
