argocd/base/tautulli/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: tautulli
          port: 8181
  tls: {}
